# sntb4_ws

./: .gitignore  README.md
src/dual_robot/: CMakeLists.txt  package.xml
src/dual_robot/launch/: dual_robot.launch.py  stretch_spawn_only.launch.py
src/stretch_ros2/: .gitignore
src/stretch_ros2/stretch_funmap/stretch_funmap/: cython_min_cost_path.c
src/stretch_ros2/stretch_gz_sim/: CMakeLists.txt  README.md  package.xml
src/stretch_ros2/stretch_gz_sim/launch/: stretch_gz_sim.launch.py
src/stretch_ros2/stretch_gz_sim/rviz/: default.rviz
src/stretch_ros2/stretch_gz_sim/urdf/: README.md  stretch_picknik_gz_transition.sdf
src/stretch_ros2/stretch_gz_sim/urdf/stretch_re1/: stretch_aruco.xacro  stretch_base_imu.xacro  stretch_d435i.xacro  stretch_description_standard.xacro  stretch_laser_range_finder.xacro  stretch_main.xacro  stretch_re1.sdf  stretch_respeaker.xacro
src/stretch_ros2/stretch_gz_sim/urdf/stretch_re1/grippers/: stretch_dry_erase_marker.xacro  stretch_gripper.xacro  stretch_gripper_with_puller.xacro
src/stretch_ros2/stretch_gz_sim/worlds/: empty_world.sdf
