<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stretch_gz_sim</name>
  <version>0.0.1</version>
  <description>The stretch_gz_sim package</description>
  <maintainer email="millan-normans@cardiff.ac.uk">smn</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>ros_gz</depend>
  <depend>realsense2_description</depend>
  <depend>stretch_description</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
